fix: scrollbar fixes (#847)
* fix: scrollbar fixes

* fix: add same styling for body-end as body-start for same behavior, fix tests

* fix: split class body-start-end styling into two classes

* fix: style class multi selector syntax

--- a/src/app/shell/components/portal-viewport/portal-viewport.component.scss
+++ b/src/app/shell/components/portal-viewport/portal-viewport.component.scss
@@ -11,12 +11,14 @@
   flex-shrink: 1;
   overflow: auto;
 
-  .onecx-body-start {
+  .onecx-body-start,
+  .onecx-body-end {
     // Shared max-width between header start and body start
     max-width: 20rem;
     background-color: var(--menu-bg-color);
     box-shadow: 1px 1px 0 0 var(--divider-color, #0003);
-    overflow: auto;
+    overflow-x: hidden;
+    overflow-y: auto;
     flex-grow: 0;
     flex-shrink: 0;
     display: flex;
@@ -28,13 +30,6 @@
     overflow: auto;
     display: flex;
     flex-direction: column;
-  }
-
-  .onecx-body-end {
-    // Shared max-width between header end and body end
-    max-width: 25rem;
-    flex-grow: 0;
-    flex-shrink: 0;
   }
 }
 
